--- a/src/main/resources/com/example/universityadmissions/hello-view.fxml
+++ b/src/main/resources/com/example/universityadmissions/hello-view.fxml
@@ -1,67 +1,75 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane fx:controller="com.example.universityadmissions.ApplicantController"
-            xmlns="http://javafx.com/javafx/17"
-            xmlns:fx="http://javafx.com/fxml/1"
-            prefWidth="800" prefHeight="600">
+<VBox maxWidth="1118.0" prefHeight="529.0" prefWidth="1076.0" spacing="10" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.universityadmissions.Controller">
+  <padding>
+    <Insets topRightBottomLeft="20" />
+  </padding>
+  <Label text="Заполнение данных абитуриента" />
 
-  <!-- Основной контейнер -->
-  <VBox spacing="10" AnchorPane.topAnchor="10" AnchorPane.bottomAnchor="10"
-        AnchorPane.leftAnchor="10" AnchorPane.rightAnchor="10">
+  <!-- Абитуриент -->
+  <GridPane hgap="10" vgap="10">
+    <Label text="ФИО:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+    <TextField fx:id="fullNameField" GridPane.columnIndex="1" GridPane.rowIndex="0" />
 
-    <!-- Таблица с абитуриентами -->
-    <TableView fx:id="applicantTable" VBox.vgrow="ALWAYS">
-      <columns>
-        <TableColumn fx:id="nameColumn" text="ФИО" minWidth="150"/>
-        <TableColumn fx:id="birthDateColumn" text="Дата рождения" minWidth="120"/>
-        <TableColumn fx:id="specialtyColumn" text="Специальность" minWidth="200"/>
-        <TableColumn fx:id="examScoreColumn" text="Балл экзамена" minWidth="100"/>
-        <TableColumn fx:id="addressColumn" text="Адрес" minWidth="100"/>
-        <TableColumn fx:id="phoneColumn" text="Номер телефона" minWidth="100"/>
-        <TableColumn fx:id="emailColumn" text="Email" minWidth="100"/>
-      </columns>
-    </TableView>
+    <Label text="Дата рождения:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+    <DatePicker fx:id="dateOfBirthPicker" GridPane.columnIndex="1" GridPane.rowIndex="1" />
 
-    <!-- Контейнер для полей ввода -->
-    <GridPane hgap="10" vgap="10">
+    <Label text="Серия паспорта:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+    <TextField fx:id="passportSeriesField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+
+    <Label text="Номер паспорта:" GridPane.columnIndex="0" GridPane.rowIndex="3" />
+    <TextField fx:id="passportNumberField" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+
+    <Label text="Специальность:" GridPane.columnIndex="0" GridPane.rowIndex="4" />
+    <TextField fx:id="specialtyField" GridPane.columnIndex="1" GridPane.rowIndex="4" />
       <columnConstraints>
-        <ColumnConstraints halignment="RIGHT"/>
-        <ColumnConstraints hgrow="ALWAYS"/>
+         <ColumnConstraints />
+         <ColumnConstraints />
       </columnConstraints>
+      <rowConstraints>
+         <RowConstraints />
+         <RowConstraints />
+         <RowConstraints />
+         <RowConstraints />
+         <RowConstraints />
+      </rowConstraints>
+  </GridPane>
 
-      <Label text="ФИО:"/>
-      <TextField fx:id="nameField" GridPane.columnIndex="1"/>
+  <HBox spacing="10">
+    <VBox>
+      <Label text="Дисциплина:" />
+      <TextField fx:id="Discipline" />
+    </VBox>
+    <VBox>
+      <Label text="Оценка по дисциплине:" />
+      <TextField fx:id="ExamScoreField" />
+    </VBox>
+    <VBox>
+      <Label text="Дата экзамена:" />
+      <DatePicker fx:id="ExamDatePicker" />
+    </VBox>
+  </HBox>
 
-      <Label text="Дата рождения:" GridPane.rowIndex="1"/>
-      <DatePicker fx:id="birthDatePicker" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+  <HBox spacing="10">
+    <Button onAction="#handleSaveButton" text="Сохранить" />
+    <Button fx:id="deleteButton" onAction="#handleDeleteButton" text="Удалить" />
+  </HBox>
 
-      <Label text="Адрес:" GridPane.rowIndex="2"/>
-      <TextField fx:id="addressField" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
-
-      <Label text="Телефон:" GridPane.rowIndex="3"/>
-      <TextField fx:id="phoneField" GridPane.columnIndex="1" GridPane.rowIndex="3"/>
-
-      <Label text="Email:" GridPane.rowIndex="4"/>
-      <TextField fx:id="emailField" GridPane.columnIndex="1" GridPane.rowIndex="4"/>
-
-      <Label text="Специальность:" GridPane.rowIndex="5"/>
-      <ComboBox fx:id="specialtyComboBox" GridPane.columnIndex="1" GridPane.rowIndex="5"/>
-
-      <Label text="Дата экзамена:" GridPane.rowIndex="6"/>
-      <DatePicker fx:id="examDatePicker" GridPane.columnIndex="1" GridPane.rowIndex="6"/>
-
-      <Label text="Балл экзамена:" GridPane.rowIndex="7"/>
-      <TextField fx:id="examScoreField" GridPane.columnIndex="1" GridPane.rowIndex="7"/>
-    </GridPane>
-
-    <!-- Контейнер для кнопок -->
-    <HBox spacing="10">
-      <Button fx:id="addButton" text="Добавить"/>
-      <Button fx:id="deleteButton" text="Удалить"/>
-      <Button fx:id="clearButton" text="Очистить"/>
-    </HBox>
-  </VBox>
-</AnchorPane>
+  <!-- Таблица для вывода записей абитуриентов -->
+  <TableView fx:id="abiturientsTableView" prefHeight="200.0" prefWidth="600.0" VBox.vgrow="ALWAYS">
+    <columns>
+      <TableColumn fx:id="nameColumn" prefWidth="150.0" text="ФИО" />
+      <TableColumn fx:id="specialtyColumn" prefWidth="150.0" text="Специальность" />
+      <TableColumn fx:id="totalScoreColumn" prefWidth="100.0" text="Балл" />
+      <TableColumn fx:id="birthDateColumn" prefWidth="120.0" text="Дата рождения" />
+      <TableColumn fx:id="passportSeriesColumn" prefWidth="100.0" text="Серия паспорта" />
+      <TableColumn fx:id="passportNumberColumn" prefWidth="121.0" text="Номер паспорта" />
+      <TableColumn fx:id="disciplineColumn" prefWidth="129.0" text="Дисциплина" />
+      <TableColumn fx:id="examDateColumn" prefWidth="120.0" text="Дата экзамена" />
+    </columns>
+  </TableView>
+</VBox>
